--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 #DOMAIN_APP='http://test.test-proxy.svc.cluster.local'
-DOMAIN_APP="http://192.168.100.13:31380/test-proxy/app-b-nginx/test-delay"
+DOMAIN_APP="http://app-b.test-proxy.svc.cluster.local/delay/5000"
